Optimise le déploiement pour Jenkins et Postman
- Ajoute server.port=8080 dans application.yml
- Configure CORS avec origines multiples (localhost:4200, 8085, 3000)
- Ajoute /actuator/** aux endpoints publics dans SecurityConfiguration
- Corrige docker-compose: ports MySQL 3306, healthcheck curl
- Augmente le temps d'attente MySQL à 30s dans Jenkinsfile
- Active SHOW_HEALTH_DETAILS=true par défaut pour le dev